Overflow fix

--- a/src/Kubera.App/ClientApp/src/app/dashboard/dashboard-assets/dashboard-assets.component.scss
+++ b/src/Kubera.App/ClientApp/src/app/dashboard/dashboard-assets/dashboard-assets.component.scss
@@ -29,6 +29,7 @@
 
 .table {
   flex: 1;
+  overflow-y: auto;
 
   table {
     width: 100%;
