--- a/src/Kubera.App/ClientApp/src/app/dashboard/dashboard-transactions/dashboard-transactions.component.scss
+++ b/src/Kubera.App/ClientApp/src/app/dashboard/dashboard-transactions/dashboard-transactions.component.scss
@@ -37,6 +37,7 @@
 
 .table {
   flex: 1;
+  overflow-y: auto;
 
   table {
     width: 100%;
